# ModernOpenGLSample

./: CMakeLists.txt  Model.cpp  Model.h  animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  mesh.h  model_animation.h  shader_m.h  skeletal_animation.cpp
models/black/: Blacksmith_AmM_SK.dae
models/guy/: 0-T pose.max  1-Happy guy.max  11-Bored guy looks at the time on his watch.max  15-Dude coughs.max  5-Guy who waves.max  6-Threatening to kill.max  8-Applause.max  laugh.max
shaders/: anim_model.vs
